Actualización de Service, contenido.

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@ html,
 body {
   /* height: 100%; */
   color: #fff;
-  /*background: #1f1934;*/
-  background: #1E90FF;
+  background: #1E2A44;
+ 
 }
 
 main {
